k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: distribuidas
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30081
